@@ -1,3 +1,8 @@
+2011-09-02 Philipp Klaus Krause <pkk AT spth.de>
+
+	* tests/bug3403429.c:
+	  Regression etst for bug 3403429.
+
 2011-09-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/gen.c:
